# projeto-som-poly

./: README.md  lauda.md  main.py  note.ipynb  pyproject.toml
